// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeScale golden output > boundary: leap-year Feb 28→Mar 1 2024 (hour scale) 1`] = `
{
  "tickCount": 9,
  "tickInterval": {
    "approxMs": 21600000,
    "step": 6,
    "unit": "hour",
  },
  "ticks": [
    {
      "dateString": "2024-02-28T00:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "28 Feb 00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T06:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "28 Feb 06:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T12:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "28 Feb 12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T18:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "28 Feb 18:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T00:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "29 Feb 00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T06:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "29 Feb 06:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T12:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "29 Feb 12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T18:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "29 Feb 18:00",
      "year": 2024,
    },
    {
      "dateString": "2024-03-01T00:00:00.000Z",
      "month": 3,
      "unit": "hour",
      "value": "01 Mar 00:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > boundary: year crossing Dec 28 2023 → Jan 5 2024 (day scale) 1`] = `
{
  "tickCount": 9,
  "tickInterval": {
    "approxMs": 86400000,
    "step": 1,
    "unit": "day",
  },
  "ticks": [
    {
      "dateString": "2023-12-28T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "28 Dec 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-12-29T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "29 Dec 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-12-30T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "30 Dec 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-12-31T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "31 Dec 2023",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "01 Jan 2024",
      "year": 2024,
    },
    {
      "dateString": "2024-01-02T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "02 Jan 2024",
      "year": 2024,
    },
    {
      "dateString": "2024-01-03T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "03 Jan 2024",
      "year": 2024,
    },
    {
      "dateString": "2024-01-04T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "04 Jan 2024",
      "year": 2024,
    },
    {
      "dateString": "2024-01-05T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "05 Jan 2024",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > days: 10-day range 1`] = `
{
  "tickCount": 11,
  "tickInterval": {
    "approxMs": 86400000,
    "step": 1,
    "unit": "day",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "01 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-02T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "02 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-03T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "03 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-04T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "04 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-05T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "05 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-06T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "06 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-07T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "07 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-09T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "09 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-10T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "10 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-11T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "11 Jan",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > hours: 5-hour range 1`] = `
{
  "tickCount": 11,
  "tickInterval": {
    "approxMs": 1800000,
    "step": 30,
    "unit": "minute",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T13:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "13:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T13:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "13:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T14:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "14:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T14:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "14:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T15:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "15:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T15:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "15:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T16:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "16:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T16:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "16:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T17:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "17:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > minutes: 8-minute range 1`] = `
{
  "tickCount": 9,
  "tickInterval": {
    "approxMs": 60000,
    "step": 1,
    "unit": "minute",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:01",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:02:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:02",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:03:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:03",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:04:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:04",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:05:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:05",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:06:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:06",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:07:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:07",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:08:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:08",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > minutes: 30-minute range 1`] = `
{
  "tickCount": 7,
  "tickInterval": {
    "approxMs": 300000,
    "step": 5,
    "unit": "minute",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:05:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:05",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:10:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:10",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:15:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:15",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:20:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:20",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:25:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:25",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:30:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:30",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > months: 100-day range 1`] = `
{
  "tickCount": 7,
  "tickInterval": {
    "approxMs": 1209600000,
    "step": 2,
    "unit": "week",
  },
  "ticks": [
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-22T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "22 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-05T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "05 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-19T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "19 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-03-04T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "04 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-03-18T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "18 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "week",
      "value": "01 Apr",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > months: 200-day range 1`] = `
{
  "tickCount": 14,
  "tickInterval": {
    "approxMs": 1209600000,
    "step": 2,
    "unit": "week",
  },
  "ticks": [
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-22T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "22 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-05T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "05 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-19T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "19 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-03-04T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "04 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-03-18T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "18 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "week",
      "value": "01 Apr",
      "year": 2024,
    },
    {
      "dateString": "2024-04-15T00:00:00.000Z",
      "month": 4,
      "unit": "week",
      "value": "15 Apr",
      "year": 2024,
    },
    {
      "dateString": "2024-04-29T00:00:00.000Z",
      "month": 4,
      "unit": "week",
      "value": "29 Apr",
      "year": 2024,
    },
    {
      "dateString": "2024-05-13T00:00:00.000Z",
      "month": 5,
      "unit": "week",
      "value": "13 May",
      "year": 2024,
    },
    {
      "dateString": "2024-05-27T00:00:00.000Z",
      "month": 5,
      "unit": "week",
      "value": "27 May",
      "year": 2024,
    },
    {
      "dateString": "2024-06-10T00:00:00.000Z",
      "month": 6,
      "unit": "week",
      "value": "10 Jun",
      "year": 2024,
    },
    {
      "dateString": "2024-06-24T00:00:00.000Z",
      "month": 6,
      "unit": "week",
      "value": "24 Jun",
      "year": 2024,
    },
    {
      "dateString": "2024-07-08T00:00:00.000Z",
      "month": 7,
      "unit": "week",
      "value": "08 Jul",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > months: 900-day range 1`] = `
{
  "tickCount": 10,
  "tickInterval": {
    "approxMs": 7776000000,
    "step": 3,
    "unit": "month",
  },
  "ticks": [
    {
      "dateString": "2022-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2022",
      "year": 2022,
    },
    {
      "dateString": "2022-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "month",
      "value": "Apr 2022",
      "year": 2022,
    },
    {
      "dateString": "2022-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2022",
      "year": 2022,
    },
    {
      "dateString": "2022-10-01T00:00:00.000Z",
      "month": 10,
      "unit": "month",
      "value": "Oct 2022",
      "year": 2022,
    },
    {
      "dateString": "2023-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "month",
      "value": "Apr 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-10-01T00:00:00.000Z",
      "month": 10,
      "unit": "month",
      "value": "Oct 2023",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2024",
      "year": 2024,
    },
    {
      "dateString": "2024-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "month",
      "value": "Apr 2024",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > seconds: 2-minute range 1`] = `
{
  "tickCount": 9,
  "tickInterval": {
    "approxMs": 15000,
    "step": 15,
    "unit": "second",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:15.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:15",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:30.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:45.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:45",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:15.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:15",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:30.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:45.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:45",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:02:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:02:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > seconds: 5-second range 1`] = `
{
  "tickCount": 6,
  "tickInterval": {
    "approxMs": 1000,
    "step": 1,
    "unit": "second",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:01.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:01",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:02.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:02",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:03.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:03",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:04.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:04",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:05.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:05",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > seconds: 30-second range 1`] = `
{
  "tickCount": 7,
  "tickInterval": {
    "approxMs": 5000,
    "step": 5,
    "unit": "second",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:05.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:05",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:10.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:10",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:15.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:15",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:20.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:20",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:25.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:25",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:30.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:30",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > weeks/days: 40-day range 1`] = `
{
  "tickCount": 6,
  "tickInterval": {
    "approxMs": 604800000,
    "step": 1,
    "unit": "week",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "01 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-15T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "15 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-22T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "22 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-29T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "29 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-05T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "05 Feb",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > weeks: 70-day range 1`] = `
{
  "tickCount": 11,
  "tickInterval": {
    "approxMs": 604800000,
    "step": 1,
    "unit": "week",
  },
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "01 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-15T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "15 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-22T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "22 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-29T00:00:00.000Z",
      "month": 1,
      "unit": "week",
      "value": "29 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-05T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "05 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-12T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "12 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-19T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "19 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-26T00:00:00.000Z",
      "month": 2,
      "unit": "week",
      "value": "26 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-03-04T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "04 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-03-11T00:00:00.000Z",
      "month": 3,
      "unit": "week",
      "value": "11 Mar",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output > years: 6-year range 1`] = `
{
  "tickCount": 13,
  "tickInterval": {
    "approxMs": 15552000000,
    "step": 6,
    "unit": "month",
  },
  "ticks": [
    {
      "dateString": "2018-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2018",
      "year": 2018,
    },
    {
      "dateString": "2018-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2018",
      "year": 2018,
    },
    {
      "dateString": "2019-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2019",
      "year": 2019,
    },
    {
      "dateString": "2019-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2019",
      "year": 2019,
    },
    {
      "dateString": "2020-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2020",
      "year": 2020,
    },
    {
      "dateString": "2020-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2020",
      "year": 2020,
    },
    {
      "dateString": "2021-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2021",
      "year": 2021,
    },
    {
      "dateString": "2021-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2021",
      "year": 2021,
    },
    {
      "dateString": "2022-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2022",
      "year": 2022,
    },
    {
      "dateString": "2022-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2022",
      "year": 2022,
    },
    {
      "dateString": "2023-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2023",
      "year": 2023,
    },
    {
      "dateString": "2023-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul 2023",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan 2024",
      "year": 2024,
    },
  ],
}
`;
